--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-material-lib-boilerplate",
-  "version": "0.0.0",
+  "name": "ngx-totk-amiibo-list",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve demo",
