--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
     "rxjs": "~7.5.0",
+    "three": "^0.153.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -34,6 +35,7 @@
     "@nx/workspace": "16.0.1",
     "@schematics/angular": "~14.2.1",
     "@types/jasmine": "~4.0.0",
+    "@types/three": "^0.152.1",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
