--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
+    "@ar-js-org/ar.js-threejs": "github:AR-js-org/AR.js-threejs#d291b65",
     "rxjs": "~7.5.0",
     "three": "^0.153.0",
     "tslib": "^2.3.0",
