--- a/angular.json
+++ b/angular.json
@@ -134,6 +134,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "ssl": true,
+            "sslKey": "localhost.key",
+            "sslCert": "localhost.crt"
+          },
           "configurations": {
             "production": {
               "browserTarget": "demo:build:production"
